Fixed bug #32813 (parse_url() does not handle scheme-only urls properly).